--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<nav>
 				<ul>
 					<a href="index.html" class="logo">Sivan Xu</a>
-					<li><a href="resume.pdf" target="_blank" class="tags">Resume</a></li>
+					<li><a href="Resume.pdf" target="_blank" class="tags">Resume</a></li>
 					<li><a href="#projects" class="tags">Projects</a></li>
 					<li><a href="#education" class="tags">Education</a></li>
 					<li><a href="#devlog" class="tags">Devlogs</a></li>
